fixed title page to correct overlapping

--- a/custom.css
+++ b/custom.css
@@ -176,7 +176,7 @@ a, a > code {
   right: 30px;
   font-family: 'Nunito Sans', sans-serif;
 }
-#joy-lindsay {
+#joy-lindsay-and-andrea-bringhurst {
   position: fixed;
   bottom: 40px;
   right:32px;
